--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,22 @@
         android:theme="@style/Theme.ResidentialManagement"
         tools:targetApi="31">
         <activity
+            android:name=".MaintenanceDetail"
+            android:exported="false" />
+        <activity
+            android:name=".AddMaintenanceBIll"
+            android:exported="false" />
+        <activity
+            android:name=".Maintenance"
+            android:exported="false" />
+        <activity
             android:name=".Add_Announcement"
             android:exported="false"
-            android:parentActivityName=".Announcement"/>
+            android:parentActivityName=".Announcement" />
         <activity
             android:name=".Announcement"
             android:exported="false"
-            android:parentActivityName=".dashboard_CYA"/>
+            android:parentActivityName=".dashboard_CYA" />
         <activity
             android:name=".Add_Rule"
             android:exported="false"
@@ -46,14 +55,6 @@
             android:parentActivityName=".dashboard_CYA" />
         <activity
             android:name=".DecisionPoll"
-            android:exported="false"
-            android:parentActivityName=".dashboard_CYA" />
-        <activity
-            android:name=".add_mtn_bill"
-            android:exported="false"
-            android:parentActivityName=".maintenance" />
-        <activity
-            android:name=".maintenance"
             android:exported="false"
             android:parentActivityName=".dashboard_CYA" />
         <activity
